# dirac_caspt2

./: #test_abe.f90#  ._.readint2_casci_co.f.swp  ._Makefile  ._Makefile~  ._calce0.f  ._calce0.f~  ._casci.f  ._casci.f~  ._casci_ty.f  ._casci_ty.f~  ._casdet.f  ._casdet.f~  ._casdet_ty.f  ._casdet_ty.f.save  ._casdet_ty.f~  ._casdet_ty_utchem.f  ._casmat.f  ._casmat.f~  ._checkdgc.f  ._create_binmdcint.f  ._create_binmdcint.f90  ._create_binmdcint.f90~  ._create_binmdcint.f~  ._create_mdcint  ._create_mdcint~  ._cutoff.f  ._debug_create_binmdcint.f  ._diag.f  ._diag.f~  ._dim.f  ._dim.f~  ._e0after_tra.f  ._e0after_tra.f~  ._e0after_tra_ty.f  ._e0after_tra_ty.f~  ._e0test_v2.f  ._e0test_v2.f~  ._eeff_casci.f  ._eeff_casci.f_save  ._eeff_casci.f_save~  (+491 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  opened-new-issue.yml
cmake/: commit_hash.cmake
src/: .editorconfig  .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  calce0.F90  calce0.f90  casci.F90  casci.f90  casci_ty.f90  casdet.f90  casdet_ty.f90  casdet_ty_utchem.f90  casmat.F90  casmat.f90  casmat_modified.f90  checkdgc.F90  checkdgc.f90  create_binmdcint.f90  create_binmdcint_co.f90  create_mdcint  create_newmdcint.F90  create_newmdcint.f90  cutoff.f90  dcaspt2_deallocate.F90  dcaspt2_deallocate.f90  dcaspt2_main.f90  dcaspt2_run_subprograms.F90  dcaspt2_run_subprograms.f90  density_matrix.F90  density_matrix.f90  diag.F90  diag.f90  dim.f90  divide_2_elec_integral_into_subspaces.F90  divide_2_elec_integral_into_subspaces.f90  e0after_tra.F90  e0after_tra.f90  e0after_tra_ty.f90  e0test.F90  (+146 more)
test/: .gitignore  CMakeLists.txt  conftest.py  module_testing.py
test/c1_methane/: active.inp  test_methane.py
test/c1_methane/dirac_data/: methane.inp
test/c2_h2o/: test_c2_h2o.py
test/c32h_co2/: test_c32h_co2.py
test/c32h_co2/dirac_data/: CO2.inp
test/cs_methanol/: active.inp  reference.methanol.out  test_cs_methanol.py
test/cs_methanol/dirac_data/: methanol_methanol.out
test/dev/: .gitignore
test/dev/32bit_c32_co_dev/: MRCONEE  active.inp  reference.32bit_c32_co_dev.out  test_32bit_c32_co_dev.py
test/dev/c1_h2/: MDCINT  MRCONEE  active.inp  reference.h2.out  test_dev_c1_h2.py
test/dev/c1_methane/: test_dev_c1_methane.py
test/dev/c1_methane_dev/: MRCONEE  active.inp  reference.c1_methane_dev.out  test_c1_methane_dev.py
test/dev/c2_h2o/: MDCINXXXX2  MDCINXXXX3  test_dev_c2_h2o.py
test/dev/c2_h2o_dev/: MDCINT  MDCINXXXX1  MRCONEE  active.inp  reference.c2_h2o_dev.out  test_c2_h2o_dev.py
test/dev/c32_co/: .gitignore  active.inp  reference.CO.out  test_dev_c32_co.py
test/dev/c32_co_dev/: MRCONEE  active.inp  reference.c32_co_dev.out  test_c32_co_dev.py
test/dev/c32h_n2/: active.inp  test_dev_c32h_n2.py
test/dev/c32h_n2_dev/: MRCONEE  active.inp  reference.c32h_n2_dev.out  test_c32h_n2_dev.py
test/dev/c32h_n2_small_nsec_dev/: active.inp  reference.c32h_n2_small_nsec_dev.out  test_c32h_n2_small_nsec_dev.py
test/dev/check_minelecras3_dev/: MDCINT  MRCONEE  active.inp  reference.check_minelecras3_dev.out  test_check_minelecras3_dev.py
test/dev/ivo_c2_h2o/: .gitignore  DFPCMO  MRCONEE  active.ivo.inp  reference.DFPCMONEW  test_ivo_h2o_6_31g.py
test/dev/ivo_c2_h2o_dev/: .gitignore  active.ivo.inp  test_ivo_c2_h2o_dev.py
test/dev/ivo_c32h_ar_dev/: reference.DFPCMONEW  test_ivo_c32h_ar_dev.py
test/dev/ivo_c32h_ar_with_kappa_dev/: .gitignore  DFPCMO  MDCINT  MRCONEE  active.ivo.inp  test_ivo_c32h_ar_with_kappa_dev.py
test/dev/ivo_c32h_n2_dev_dirac19/: .gitignore  DFPCMO  MDCINT  MDCINXXXX6  active.ivo.inp  test_ivo_c32h_n2_dev_dirac19.py
test/dev/ivo_c32h_n2_dev_dirac22/: MDCINT  MDCINXXXX3  MDCINXXXX5  MRCONEE  active.ivo.inp  dirac_data  reference.DFPCMONEW  test_ivo_c32h_n2_dev_dirac22.py
test/dev/ivo_n2/: .gitignore  MDCINXXXX3  active.ivo.inp  reference.DFPCMONEW.dirac19  test_ivo_n2_sto3g.py
test/dev/mdcint_scheme_4_dirac22_c32h_n2_dev/: MRCONEE  active.inp  reference.mdcint_scheme_4_dirac22_c32h_n2_dev.out  test_mdcint_scheme_4_dirac22_c32h_n2_dev.py
test/dev/mdcint_scheme_6_dirac23_c32h_n2_dev/: MDCINT  (+11 more)
test/h2/: .gitignore  H2.caspt2.out  H2.caspt2.out.prev  MDCINT  MRCONEE  active.inp  h2.sh  reference.H2.out  test_h2.py
test/h2o/: active.inp  reference.H2O.out  sh_new  test_h2o.py
test/h2o_old/: test_h2o_old.py
test/lower_MPI_h2/: .gitignore  decimal.py  test_lower_MPI_h2.py
test/multiple_mdcint_h2/: MDCINXXXX2  active.inp  reference.H2.out  test_multiple_mdcint_h2.py
test/unit_test/: .gitignore  CMakeLists.txt
test/unit_test/gen_dcapst2_restart/: .gitignore  expected_test_pass_full_subspaces  expected_test_pass_in_the_middle_subspace_broken  expected_test_pass_multi_ciroots_2_1  expected_test_pass_multi_ciroots_2_2  expected_test_pass_subspace_a_and_b  test_fail_duplicated_energies.in  test_gen_dcaspt2_restart.py  test_no_output.in  test_pass_full_subspaces.in  test_pass_in_the_middle_subspace_broken.in  test_pass_multi_ciroots.in  test_pass_subspace_a_and_b.in
test/unit_test/lowercase/: .gitignore  CMakeLists.txt  input  test_lowercase.f90  test_lowercase.py
test/unit_test/ras3_bitcheck/: .gitignore  CMakeLists.txt  active.inp  expected  test_ras3_bitcheck.f90  test_ras3_bitcheck.py
test/unit_test/ras_input_reader/: .gitignore  CMakeLists.txt  expected  input  ref.ras3  test_input_reader.f90  test_input_reader.py  test_ras_input_reader.f90  test_ras_input_reader.py
test/unit_test/sort_test/: .gitignore  CMakeLists.txt  a.out  sort_test_int.f90  sort_test_int_reverse.f90  sort_test_real.f90  sort_test_real_reverse.f90  test_sort.py  test_sort_int.f90  test_sort_int_reverse.f90  test_sort_real.f90  test_sort_real_reverse.f90
test/unit_test/time_calc/: CMakeLists.txt  input  test_time_calc.f90  test_time_calc.py
test/unit_test/uppercase/: .gitignore  CMakeLists.txt  expected  input  test_uppercase.f90  test_uppercase.py
tools/: dcaspt2_input  dcaspt2_test_generator  gen_dcaspt2_restart
(+113 files in other folders)
