# Add all subdirectories with CMakeLists.txt files
get_filename_component(CURRENT_DIR ${CMAKE_CURRENT_LIST_FILE} PATH)
FILE(GLOB children RELATIVE ${CURRENT_DIR} ${CURRENT_DIR}/*)
foreach(child ${children})
  if(IS_DIRECTORY ${CURRENT_DIR}/${child})
    if(EXISTS ${CURRENT_DIR}/${child}/CMakeLists.txt)
      add_subdirectory(${CURRENT_DIR}/${child})
    endif()
  endif()
endforeach()
